k8s/namespace.yaml
# SPDX-License-Identifier: MIT
# Copyright (c) 2026 SafeVixAI Team
apiVersion: v1
kind: Namespace
metadata:
  name: safevixai
